fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -665,6 +665,14 @@ video {
   align-self: flex-end;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
+.overflow-x-visible {
+  overflow-x: visible;
+}
+
 .border-b-4 {
   border-bottom-width: 4px;
 }
@@ -864,8 +872,8 @@ video {
 }
 
 @media (min-width: 1174px) {
-  .desktop\:top-11 {
-    top: 2.75rem;
+  .desktop\:top-10 {
+    top: 2.5rem;
   }
 
   .desktop\:top-\[133px\] {
@@ -884,10 +892,6 @@ video {
     right: 380px;
   }
 
-  .desktop\:top-10 {
-    top: 2.5rem;
-  }
-
   .desktop\:mr-8 {
     margin-right: 2rem;
   }
@@ -896,8 +900,8 @@ video {
     margin-bottom: 115px;
   }
 
-  .desktop\:mt-12 {
-    margin-top: 3rem;
+  .desktop\:mt-10 {
+    margin-top: 2.5rem;
   }
 
   .desktop\:mt-\[66px\] {
@@ -906,14 +910,6 @@ video {
 
   .desktop\:mr-0 {
     margin-right: 0px;
-  }
-
-  .desktop\:mt-11 {
-    margin-top: 2.75rem;
-  }
-
-  .desktop\:mt-10 {
-    margin-top: 2.5rem;
   }
 
   .desktop\:block {
@@ -926,11 +922,6 @@ video {
 
   .desktop\:max-w-\[445px\] {
     max-width: 445px;
-  }
-
-  .desktop\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
   }
 
   .desktop\:text-4xl {
